<?xml version='1.0' encoding='UTF-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.Ox08.paster.webapp</groupId>
    <artifactId>paster-project</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>Paster Project</name>
    <url>https://github.com/alex0x08/paster</url>
    <inceptionYear>2011</inceptionYear>
    <scm>
        <connection>scm:git:https://github.com/alex0x08/paster.git</connection>
        <url>scm:git:https://github.com/alex0x08/paster.git</url>
        <tag>HEAD</tag>
    </scm>
    <distributionManagement>
        <repository>
            <id>deployment</id>
            <name>Internal Releases</name>
            <url>file:///c:/work/releases/repository/maven-repository/</url>
        </repository>
    </distributionManagement>
    <developers>
        <developer>
            <name>Alex Chernyshev</name>
            <timezone>GMT+4</timezone>
            <email>alex3.145@gmail.com</email>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>

        </license>
    </licenses>
    <properties>
        <revision>3.0.00-RELEASE</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.test.skip>true</maven.test.skip>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <scalaVersion>2.13.16</scalaVersion>
        <spring.version>6.2.7</spring.version>
        <slf4j.version>2.0.17</slf4j.version>
        <logback.version>1.5.18</logback.version>
        <jackson.version>2.19.0</jackson.version>
        <jakartaEEVersion>11.0.0</jakartaEEVersion>
        <jetty.version>12.0.22</jetty.version>
        <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
        <buildnumber-maven-plugin.version>3.2.1</buildnumber-maven-plugin.version>
        <main.basedir>${basedir}</main.basedir>
        <netbeans.hint.license>apache20</netbeans.hint.license>
    </properties>
    <modules>
        <module>libs</module>        
        <module>paster-webapp</module>
        <module>paster-run</module>
        <module>paster-dist</module>
      </modules>
    <pluginRepositories>

    </pluginRepositories>
    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>Maven Repository Switchboard</name>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
        <repository>
            <id>spring</id>
            <name>Spring Release</name>
            <url>https://maven.springframework.org/release</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.7.0</version>
                <executions>
                    <execution>
                        <!-- Tidy up all POMs before they are published -->
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <configuration>
                            <updatePomFile>true</updatePomFile>
                            <flattenMode>oss</flattenMode>
                            <pomElements>
                                <parent>expand</parent>
                                <distributionManagement>remove</distributionManagement>
                                <repositories>remove</repositories>
                            </pomElements>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>9.0.2</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>1.2.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <!--debug>true</debug>
                    <debuglevel>none</debuglevel-->
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgs>
                        <!--arg>-Werror</arg-->
                        <arg>-Xlint:all,-processing</arg>
                        <arg>-Xlint:-serial</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>4.9.5</version>
                <configuration>
                    <args>
                        <arg>-deprecation</arg>
                        <arg>-feature</arg>
                    </args>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.4.0</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>${buildnumber-maven-plugin.version}</version>
            </plugin>
           </plugins>
    </build>
</project>
